tests/ui/impl-trait/in-trait/gat-outlives.stderr
error: missing required bound on `Gat`
  --> $DIR/gat-outlives.rs:6:5
   |
LL |     type Gat<'a>;
   |     ^^^^^^^^^^^^^
   |
   = note: this bound is currently required to ensure that impls have maximum flexibility
   = note: we are soliciting feedback, see issue #87479 <https://github.com/rust-lang/rust/issues/87479> for more information
help: add the required where clause
   |
LL |     type Gat<'a> where Self: 'a;
   |                  ++++++++++++++

error: missing required bound on `Gat`
  --> $DIR/gat-outlives.rs:12:5
   |
LL |     type Gat<'a>;
   |     ^^^^^^^^^^^^^
   |
   = note: this bound is currently required to ensure that impls have maximum flexibility
   = note: we are soliciting feedback, see issue #87479 <https://github.com/rust-lang/rust/issues/87479> for more information
help: add the required where clause
   |
LL |     type Gat<'a> where Self: 'a;
   |                  ++++++++++++++

error: aborting due to 2 previous errors

